#5 - implement RepositoryImplTest, ExitStatusBuilderTest and remove ExitStatusBuilder interface